--- a/NLayerProject.Web/appsettings.json
+++ b/NLayerProject.Web/appsettings.json
@@ -2,12 +2,14 @@
   "ConnectionStrings": {
     "SqlConStr": "Data Source=CHARON;Initial Catalog=NLayerProjectApiDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "baseUrl": "https://localhost:44349/api/",
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
+}
